# ppi-analyser

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  README_docker.md  batched_prompts_tmp  config.py  core.py  docker-compose.yml  docker-entrypoint.sh  env.template  exceptions.py  index.html  prompts_batch.txt  pyproject.toml  requirements.txt  server.py  state.py  system_prompts.txt
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
analysis/: expansion.py  mistral_batch_pipeline.py  modifiers.py  pipeline.py  position.py  prompts.py  results.py  sentence.py
exporters/: excel.py  pdf.py
models/: base.py  deepseek.py  factory.py  gemini.py  mistral.py  no_model.py  ollama.py
ppi_analyser/: __main__.py  config.py  core.py  example_usage.py  logger.py  modifier_rules.yaml  prompts_batch.txt  server.py  state.py
ppi_analyser/analysis/: analysis_cache.py  expansion.py  modifier_rules.yaml  modifiers.py  pipeline.py  position.py  prompts.py  results.py  sentence.py
ppi_analyser/exporters/: excel.py  pdf.py
ppi_analyser/models/: dummy.py  groq.py  mistral.py  no_model.py
ppi_analyser/preprocessing/: conversation.py  segmentation.py  segmentation_cache.py  speakers.py
ppi_analyser/stanza/: stanza_api_proxy.py  stanza_client.py
ppi_analyser/ui/: index.html
preprocessing/: conversation.py  detect_narration.py  segmentation.py  speakers.py
stanza/: gunicorn_config.py  stanza_api.py  wsgi.py
ui/: index.html
windows_installer/: LANCER_PPI.bat  guide_installation.html  setup_ppi.py
