# pyproject.toml
[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppi_analyser"
version = "0.1.8.1"
description = "Analyse automatique de phrases préfabriquées des interactions (PPI) — pipeline NLP + serveur FastAPI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Youssef Zeroual" },
]
keywords = ["nlp", "phraseology", "french", "corpus-linguistics", "fastapi", "stanza"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Stanza NLP server
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    # NLP
    "torch>=2.3.1",
    "stanza>=1.8.0",
    "nltk>=3.8.1",
    # LLM clients
    "mistralai>=1.0.0",
    "openai>=1.30.0",
    "ollama>=0.2.0",
    "google-generativeai>=0.7.0",
    "groq>=0.9.0",
    # Data / export
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.2.0",
    "reportlab>=4.1.0",
    "markdown",
    "weasyprint",
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff", "build", "twine"]

[project.scripts]
ppi_analyser = "ppi_analyser.server:main"

[project.urls]
Homepage = "https://github.com/YoussefZeroual/ppi-analyser"
Repository = "https://github.com/YoussefZeroual/ppi-analyser"
Issues = "https://github.com/YoussefZeroual/ppi-analyser/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"ppi_analyser" = [
    "*.yaml", "*.yml", "*.json", "*.txt", "*.md", "*.py",
    "ui/*",
    "ui/**/*",
    "analysis/*.yaml",
    "analysis/*.txt",
    "analysis/*.py",
    "stanza/*.py",
    "stanza/*.txt",
    "exporters/*.py",
    "models/*.py",
    "preprocessing/*.py",
]

[tool.ruff]
line-length = 100
